--- a/test2/test2.vcxproj.filters
+++ b/test2/test2.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="test2.cpp">
+    <ClCompile Include="printPrimeNumber.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
